--- a/delivery/assets/pages/cart.html
+++ b/delivery/assets/pages/cart.html
@@ -35,15 +35,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="../../index.html"
+              <a class="nav-link active" aria-current="page" href="/home"
                 >Home</a
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Link</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -123,19 +117,14 @@
           <div class="col-md-3 col-sm-6">
             <h4>Company</h4>
             <ul>
-              <li><a href="#">about us</a></li>
               <li><a href="#">our services</a></li>
               <li><a href="#">privacy policy</a></li>
-              <li><a href="#">afflite program</a></li>
             </ul>
           </div>
           <div class="col-md-3 col-sm-6">
             <h4>Get help</h4>
             <ul>
-              <li><a href="#">FAQ</a></li>
               <li><a href="#">delivery</a></li>
-              <li><a href="#">returns</a></li>
-              <li><a href="#">order status</a></li>
               <li><a href="#">payment options</a></li>
             </ul>
           </div>
@@ -143,8 +132,6 @@
             <h4>Online order</h4>
             <ul>
               <li><a href="#">nsima</a></li>
-              <li><a href="#">rice</a></li>
-              <li><a href="#">spaghetti</a></li>
               <li><a href="#">potatoes</a></li>
             </ul>
           </div>
