Edited many file
Kugwira ntchito mwakathithi

--- a/delivery/assets/pages/AboutUs1.html
+++ b/delivery/assets/pages/AboutUs1.html
@@ -33,7 +33,7 @@
   <body className="snippet-body">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">TPKf</a>
+        <a class="navbar-brand" href="/home">TPKfood</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,16 +45,6 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="../../index.html"
-              >Home</a
-            >
-          </div>
-        </div>
       </div>
     </nav>
 
