--- a/delivery/assets/pages/cart.html
+++ b/delivery/assets/pages/cart.html
@@ -20,7 +20,7 @@
     <!-- NAVIGATION BAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">TPKFood</a>
+        <a class="navbar-brand" href="/home">TPKFood</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,8 +35,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/home"
-                >Home</a
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../pages/zakudyaHome.html"
+              >
+                Restaurants</a
               >
             </li>
           </ul>
@@ -57,28 +61,20 @@
 
     <div class="container">
       <header>
-        <h1>LIST PRODUCT</h1>
+        <h1>List of food</h1>
         <div class="iconCart">
           <img src="../img/carticon.png" />
           <div class="totalQuantity">0</div>
         </div>
       </header>
 
-      <!-- <div class="listProduct">
-        <div class="item">
-          <img src="assets/My_images/food1.jpg" alt="" />
-          <h2>CoPilot / Black / Automatic</h2>
-          <div class="price">K550</div>
-          <button>Add To Cart</button>
-        </div>
-      </div> -->
       <div class="listProduct">
         <div class="card">
           <img src="../img/fullsize/1.jpg" class="card-img-top" alt="food" />
           <div class="card-body">
-            <h5 class="card-title">CoPilot / Black / Automatic</h5>
-            <p class="card-text price">K550</p>
-            <button class="btn btn-primary">Add To Cart</button>
+            <h5 class="card-title text-center">CoPilot / Black / Automatic</h5>
+            <p class="card-text text-center price">K550</p>
+            <button class="btn btn-outline-info">Add To Cart</button>
           </div>
         </div>
       </div>
