--- a/delivery/assets/pages/RoutingOrderTrack.html
+++ b/delivery/assets/pages/RoutingOrderTrack.html
@@ -42,7 +42,7 @@
   <body onload="onLoad();">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">TPKFood</a>
+        <a class="navbar-brand" href="/home">TPKFood</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -54,15 +54,6 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/home"
-                >Home</a
-              >
-            </li>
-          </ul>
-        </div>
       </div>
     </nav>
     <header class="d-flex justify-content-center align-items-center py-3">
