--- a/delivery/assets/pages/zakudyaHome.html
+++ b/delivery/assets/pages/zakudyaHome.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">TPKf</a>
+        <a class="navbar-brand" href="/home">TPKf</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,10 +33,9 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
-
             <form class="d-flex">
               <input
                 class="form-control me-2"
