--- a/delivery/assets/pages/checkout.html
+++ b/delivery/assets/pages/checkout.html
@@ -83,10 +83,25 @@
                   <input
                     type="text"
                     class="form-control p-0"
+                    id="number"
+                    required
+                  /><label class="form-control-placeholder p-0" for="number"
+                    >Cardholder'sName</label
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-12">
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control p-0"
                     id="name"
                     required
                   /><label class="form-control-placeholder p-0" for="name"
-                    >Cardholder'sName</label
+                    >Town/City</label
                   >
                 </div>
               </div>
@@ -100,7 +115,7 @@
                     id="name"
                     required
                   /><label class="form-control-placeholder p-0" for="name"
-                    >Postal Address/House number</label
+                    >Postcode/ZIP</label
                   >
                 </div>
               </div>
