--- a/delivery/assets/pages/AboutUs1.html
+++ b/delivery/assets/pages/AboutUs1.html
@@ -33,7 +33,7 @@
   <body className="snippet-body">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/home">TPKfood</a>
+        <a class="navbar-brand" href="/">TPKfood</a>
         <button
           class="navbar-toggler"
           type="button"
