--- a/delivery/assets/pages/Dashboard.html
+++ b/delivery/assets/pages/Dashboard.html
@@ -215,30 +215,24 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>ORD-1234</td>
+                  <td>ORD-1381</td>
                   <td>Hesborn Jiyah</td>
                   <td>K2500</td>
                   <td>Pending</td>
                   <td>
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-warning disabled"
-                    >
-                      Mark as Delivered
+                    <button type="button" class="btn btn-sm btn-warning">
+                      Comfirm Order
                     </button>
                   </td>
                 </tr>
                 <tr>
-                  <td>ORD-1234</td>
+                  <td>ORD-8534</td>
                   <td>Benson Chinomba</td>
                   <td>K1500</td>
                   <td>Pending</td>
                   <td>
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-warning disabled"
-                    >
-                      Mark as Delivered
+                    <button type="button" class="btn btn-sm btn-warning">
+                      Comfirm Order
                     </button>
                   </td>
                 </tr>
@@ -248,10 +242,7 @@
                   <td>K3250</td>
                   <td>Preparing</td>
                   <td>
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-warning disabled"
-                    >
+                    <button type="button" class="btn btn-sm btn-warning">
                       Mark as Delivered
                     </button>
                   </td>
