added push notifications
ndalemba zambiri eeh

--- a/delivery/assets/pages/orderTracking.html
+++ b/delivery/assets/pages/orderTracking.html
@@ -35,10 +35,10 @@
         background: #555;
       }
       body {
-        color: #000;
+        color: #070505;
         overflow-x: hidden;
         height: 100%;
-        background-color: #2ecc71;
+        background-color: #15251c8c;
         background-repeat: no-repeat;
       }
       .card {
