--- a/delivery/assets/pages/Dashboard.html
+++ b/delivery/assets/pages/Dashboard.html
@@ -38,7 +38,7 @@
                 ><span> <a href="#recentorders">Recent orders</a></span>
               </button>
               <button class="btn mt-3">
-                <i class="fa fa-users"></i
+                <i class="fa fa-book"></i
                 ><span><a href="#assignriders">Assign Riders</a></span>
               </button>
               <button class="btn mt-3">
@@ -46,12 +46,6 @@
                 ><span><a href="#uploadmenu">Upload Menu</a></span>
               </button>
               <span class="other mt-4">Other Information</span>
-              <button class="btn mt-3">
-                <i class="fa fa-book"></i><span>Knowledge</span>
-              </button>
-              <button class="btn mt-3">
-                <i class="fa fa-question-circle"></i><span>Dashboard</span>
-              </button>
             </div>
           </div>
         </div>
@@ -268,10 +262,13 @@
                         I am from Limbe, I have a bike in good conditon, Ready
                         for any work.
                       </p>
-                      <a href="#" class="btn btn-info">Assign</a>
+                      <button id="assignbutt" class="btn btn-info">
+                        Assign
+                      </button>
                     </div>
                   </div>
                 </div>
+                <br />
                 <div class="col">
                   <div class="card" style="width: 18rem">
                     <img
@@ -285,7 +282,9 @@
                         I am from Limbe, I have a bike in good conditon, Ready
                         for any work.
                       </p>
-                      <a href="#" class="btn btn-info">Assign</a>
+                      <button id="assignbutt1" class="btn btn-info">
+                        Assign
+                      </button>
                     </div>
                   </div>
                 </div>
@@ -302,7 +301,9 @@
                         I am from Limbe, I have a bike in good conditon, Ready
                         for any work.
                       </p>
-                      <a href="#" class="btn btn-info">Assign</a>
+                      <button id="assignbutt2" class="btn btn-info">
+                        Assign
+                      </button>
                     </div>
                   </div>
                 </div>
@@ -372,14 +373,47 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     ></script>
-    <script type="text/javascript" src="#"></script>
-    <script type="text/javascript" src="#"></script>
-    <script type="text/javascript" src="#"></script>
-    <script type="text/javascript"></script>
     <script type="text/javascript">
       var myLink = document.querySelector('a[href="#"]');
       myLink.addEventListener("click", function (e) {
         e.preventDefault();
+      });
+    </script>
+    <script>
+      const foodnote = document.getElementById("assignbutt");
+      foodnote.addEventListener("click", () => {
+        Notification.requestPermission().then((perm) => {
+          if (perm === "granted") {
+            new Notification("you've assigned a rider!", {
+              body: "Wait for the comfirmation from the rider😊.",
+            });
+          }
+        });
+      });
+    </script>
+    <script>
+      const foodnote1 = document.getElementById("assignbutt1");
+      const name = document.getElementsByClassName;
+      foodnote1.addEventListener("click", () => {
+        Notification.requestPermission().then((perm) => {
+          if (perm === "granted") {
+            new Notification("you've assigned a rider!", {
+              body: "Wait for the comfirmation from the rider😊.",
+            });
+          }
+        });
+      });
+    </script>
+    <script>
+      const foodnote2 = document.getElementById("assignbutt2");
+      foodnote2.addEventListener("click", () => {
+        Notification.requestPermission().then((perm) => {
+          if (perm === "granted") {
+            new Notification("you've assigned a rider!", {
+              body: "Wait for the comfirmation from the rider😊.",
+            });
+          }
+        });
       });
     </script>
   </body>
