--- a/delivery/assets/pages/checkout.html
+++ b/delivery/assets/pages/checkout.html
@@ -4,11 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>TPKfood checkout</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css" /> -->
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css" />
 
     <script
       type="text/javascript"
@@ -17,10 +25,29 @@
     <link rel="stylesheet" href="../css/Checkout2.css" />
   </head>
   <body className="nippet-body">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/home">TPKFood</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
+
     <div class="container-fluid justify-content-center">
       <!-- new -->
       <div class="returnCart">
-        <a href="cart.html">keep shopping</a>
+        <a href="cart.html" style="text-decoration: none; font-weight: bold"
+          >keep shopping</a
+        >
         <h1>List Product in Cart</h1>
         <div class="list">
           <div class="item">
@@ -34,166 +61,236 @@
           </div>
         </div>
       </div>
-      <!-- new -->
-      <div class="row justify-content-center">
-        <div class="card my-4 p-3">
-          <div class="row main">
-            <div class="col-12">
-              &nbsp;&nbsp;&nbsp;&nbsp;<span>Credit card checkout</span>
+
+      <p>
+        <button id="placeorder" class="btn btn-primary">Place Order</button>
+        <button
+          class="btn btn-primary"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#pay"
+          aria-expanded="false"
+          aria-controls="collapseExample"
+        >
+          proceed to payment
+        </button>
+        <a class="btn btn-primary" href="../pages/RoutingOrderTrack.html"
+          >Route Map</a
+        >
+      </p>
+
+      <!-- payment -->
+      <div class="collapse" id="pay">
+        <div class="row justify-content-center">
+          <div class="card my-4 p-3">
+            <div class="row main">
+              <div class="col-12">
+                &nbsp;&nbsp;&nbsp;&nbsp;<span>Credit card checkout</span>
+              </div>
             </div>
+
+            <div class="row justify-content-center mrow">
+              <div class="col-12">
+                <img
+                  src="https://img.icons8.com/color/48/000000/mastercard-logo.png"
+                  width="35px"
+                  height="35px"
+                />
+                <img
+                  src="https://img.icons8.com/color/48/000000/visa.png"
+                  width="35px"
+                  height="35px"
+                />
+                <img
+                  src="https://th.bing.com/th/id/R.3dd3faf4c0ba0272965f5ff93cf72e5f?rik=e2fByiZqU1olDA&pid=ImgRaw&r=0"
+                  width="35px"
+                  height="35px"
+                />
+                <img
+                  src="https://th.bing.com/th/id/R.a3145dc97dc89e2720f3fec641481dc7?rik=azxUUV07rEqkvQ&pid=ImgRaw&r=0"
+                  width="35px"
+                  height="35px"
+                />
+                <img
+                  src="https://img.icons8.com/color/48/000000/paypal.png"
+                  width="35px"
+                  height="35px"
+                />
+              </div>
+            </div>
+            <form class="form-card">
+              <div class="row">
+                <div class="col-12">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      class="form-control p-0"
+                      id="number"
+                      required
+                    /><label class="form-control-placeholder p-0" for="number"
+                      >CardNumber</label
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      class="form-control p-0"
+                      id="number"
+                      required
+                    /><label class="form-control-placeholder p-0" for="number"
+                      >Cardholder'sName</label
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-12">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      class="form-control p-0"
+                      id="name"
+                      required
+                    /><label class="form-control-placeholder p-0" for="name"
+                      >Town/City</label
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      class="form-control p-0"
+                      id="name"
+                      required
+                    /><label class="form-control-placeholder p-0" for="name"
+                      >Postcode/ZIP</label
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4 col-12">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      class="form-control p-0"
+                      id="sdate"
+                      required
+                    /><label class="form-control-placeholder p-0" for="sdate"
+                      >StartDate</label
+                    >
+                  </div>
+                </div>
+                <div class="col-sm-4 col-12">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      class="form-control p-0"
+                      id="expdate"
+                      required
+                    /><label class="form-control-placeholder p-0" for="expdate"
+                      >ExpirationDate</label
+                    >
+                  </div>
+                </div>
+                <div class="col-sm-4 col-12">
+                  <div class="form-group">
+                    <input
+                      type="password"
+                      class="form-control p-0"
+                      id="passw"
+                      required
+                    /><label class="form-control-placeholder p-0" for="passw"
+                      >CVV</label
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="row lrow mt-4 mb-3">
+                <div class="col-sm-8 col-12"><h3>Total items:</h3></div>
+                <div class="col-sm-4 col-12 totalQuantity"><h5>70</h5></div>
+              </div>
+              <div class="row lrow mt-4 mb-3">
+                <div class="col-sm-8 col-12"><h3>Total price</h3></div>
+                <div class="col-sm-4 col-12 totalPrice"><h5>K900</h5></div>
+              </div>
+              <div class="row mb-2">
+                <div class="col-sm-12">
+                  <button type="button" class="btn btn-primary btn-block">
+                    Pay Now
+                  </button>
+                </div>
+              </div>
+              <div class="row mb-2">
+                <div class="col-sm-12">
+                  <a
+                    href="../pages/orderTracking.html"
+                    class="btn btn-primary btn-block"
+                    >Pay on Delivery</a
+                  >
+                </div>
+              </div>
+            </form>
           </div>
-
-          <div class="row justify-content-center mrow">
-            <div class="col-12">
-              <img
-                src="https://img.icons8.com/color/48/000000/mastercard-logo.png"
-                width="35px"
-                height="35px"
-              />
-              <img
-                src="https://img.icons8.com/color/48/000000/visa.png"
-                width="35px"
-                height="35px"
-              />
-              <img
-                src="https://img.icons8.com/color/48/000000/paypal.png"
-                width="35px"
-                height="35px"
-              />
-            </div>
-          </div>
-          <form class="form-card">
-            <div class="row">
-              <div class="col-12">
-                <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control p-0"
-                    id="number"
-                    required
-                  /><label class="form-control-placeholder p-0" for="number"
-                    >CardNumber</label
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-12">
-                <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control p-0"
-                    id="number"
-                    required
-                  /><label class="form-control-placeholder p-0" for="number"
-                    >Cardholder'sName</label
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-12">
-                <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control p-0"
-                    id="name"
-                    required
-                  /><label class="form-control-placeholder p-0" for="name"
-                    >Town/City</label
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-12">
-                <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control p-0"
-                    id="name"
-                    required
-                  /><label class="form-control-placeholder p-0" for="name"
-                    >Postcode/ZIP</label
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-sm-4 col-12">
-                <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control p-0"
-                    id="sdate"
-                    required
-                  /><label class="form-control-placeholder p-0" for="sdate"
-                    >StartDate</label
-                  >
-                </div>
-              </div>
-              <div class="col-sm-4 col-12">
-                <div class="form-group">
-                  <input
-                    type="text"
-                    class="form-control p-0"
-                    id="expdate"
-                    required
-                  /><label class="form-control-placeholder p-0" for="expdate"
-                    >ExpirationDate</label
-                  >
-                </div>
-              </div>
-              <div class="col-sm-4 col-12">
-                <div class="form-group">
-                  <input
-                    type="password"
-                    class="form-control p-0"
-                    id="passw"
-                    required
-                  /><label class="form-control-placeholder p-0" for="passw"
-                    >CVV</label
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="row lrow mt-4 mb-3">
-              <div class="col-sm-8 col-12"><h3>Total items:</h3></div>
-              <div class="col-sm-4 col-12 totalQuantity"><h5>70</h5></div>
-            </div>
-            <div class="row lrow mt-4 mb-3">
-              <div class="col-sm-8 col-12"><h3>Total price</h3></div>
-              <div class="col-sm-4 col-12 totalPrice"><h5>K900</h5></div>
-            </div>
-            <div class="row mb-2">
-              <div class="col-sm-12">
-                <button type="button" class="btn btn-primary btn-block">
-                  Pay Now
-                </button>
-              </div>
-            </div>
-            <div class="row mb-2">
-              <div class="col-sm-12">
-                <a
-                  href="../pages/orderTracking.html"
-                  class="btn btn-primary btn-block"
-                  >Pay on Delivery</a
-                >
-              </div>
-            </div>
-          </form>
         </div>
       </div>
+      <!-- payiment ends -->
     </div>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-sm-6">
+            <h4>Company</h4>
+            <ul>
+              <li><a href="#">our services</a></li>
+              <li><a href="#">privacy policy</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <h4>Get help</h4>
+            <ul>
+              <li><a href="#">delivery</a></li>
+              <li><a href="#">payment options</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <h4>Online order</h4>
+            <ul>
+              <li><a href="#">nsima</a></li>
+              <li><a href="#">potatoes</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <h4>Follow us</h4>
+            <div class="social-links">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-x"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script
       type="text/javascript"
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
     ></script>
+    <script src="../bootstrap/js/bootstrap.js"></script>
 
     <!-- <script src="../bootstrap/js/bootstrap.min.js"></script> -->
-
     <script type="text/javascript">
       var myLink = document.querySelector('a[href="#"]');
       myLink.addEventListener("click", function (e) {
