--- a/delivery/assets/pages/Dashboard.html
+++ b/delivery/assets/pages/Dashboard.html
@@ -25,7 +25,7 @@
         <div class="col-md-3 fixed-left">
           <div class="card card1 p-3">
             <div class="image d-flex flex-row align-items-center mt-3">
-              <span>TPKfood</span>
+              <span><a href="/">TPKfood</a></span>
             </div>
             <hr class="hline" />
             <div class="d-flex flex-column align-items-center">
@@ -46,6 +46,11 @@
                 ><span><a href="#uploadmenu">Upload Menu</a></span>
               </button>
               <span class="other mt-4">Other Information</span>
+              <form action="/logout?_method=DELETE" method="post">
+                <button class="btn btn-outline-warning" type="submit">
+                  LogOut
+                </button>
+              </form>
             </div>
           </div>
         </div>
