--- a/delivery/assets/pages/deliveryagent.html
+++ b/delivery/assets/pages/deliveryagent.html
@@ -53,17 +53,31 @@
   </head>
 
   <body style="background-color: rgb(221, 212, 194)">
-    <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-      <a class="navbar-brand" href="/">TPKfood</a>
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a class="nav-link" href="#recentorders">Available Orders</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Profile</a>
-        </li>
-      </ul>
-    </nav>
+    <body onload="onLoad();">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">TPKFood</a>
+          <a class="navbar-brand" href="#recentorders">Orders</a>
+          <a class="navbar-brand" href="#">profile</a>
+          <form action="/logout?_method=DELETE" method="post">
+            <button class="btn btn-outline-warning" type="submit">
+              LogOut
+            </button>
+          </form>
+
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
     <br /><br />
     <br /><br />
 
